results/SVCOMP/4-shot/log-ExSymExe20-2024_03_18_19_06_47.txt
class Main {
  static int field;
  static int field2;

  //@ requires Integer.MIN_VALUE <= x && x <= Integer.MAX_VALUE;
  //@ requires Integer.MIN_VALUE <= z && z <= Integer.MAX_VALUE;
  //@ requires Integer.MIN_VALUE <= r && r <= Integer.MAX_VALUE;
  //@ ensures \result == (z >= x) && (x < r);
  public static boolean main() {
    int x = 3;
    Main inst = new Main();
    field = 9;
    return inst.test(x, field, field2);
  }

  //@ requires Integer.MIN_VALUE <= x && x <= Integer.MAX_VALUE;
  //@ requires Integer.MIN_VALUE <= z && z <= Integer.MAX_VALUE;
  //@ requires Integer.MIN_VALUE <= r && r <= Integer.MAX_VALUE;
  //@ ensures \result == (z >= x) && (x < r);
  public boolean test(int x, int z, int r) {
    System.out.println("Testing ExSymExe20");
    int y = 3;
    r = x + z;
    x = z - y;
    z = r;
    if (z >= x) System.out.println("branch FOO1");
    else System.out.println("branch FOO2");
    if (x >= r) {
      return false;
    } else System.out.println("branch BOO2");

    return true;
  }
}
/home/max/Documents/JMLGPT/tmp/ExSymExe20.java:5: error: cannot find symbol
  //@ requires Integer.MIN_VALUE <= x && x <= Integer.MAX_VALUE;
                                    ^
  symbol:   variable x
  location: class Main
/home/max/Documents/JMLGPT/tmp/ExSymExe20.java:5: error: cannot find symbol
  //@ requires Integer.MIN_VALUE <= x && x <= Integer.MAX_VALUE;
                                         ^
  symbol:   variable x
  location: class Main
/home/max/Documents/JMLGPT/tmp/ExSymExe20.java:6: error: cannot find symbol
  //@ requires Integer.MIN_VALUE <= z && z <= Integer.MAX_VALUE;
                                    ^
  symbol:   variable z
  location: class Main
/home/max/Documents/JMLGPT/tmp/ExSymExe20.java:6: error: cannot find symbol
  //@ requires Integer.MIN_VALUE <= z && z <= Integer.MAX_VALUE;
                                         ^
  symbol:   variable z
  location: class Main
/home/max/Documents/JMLGPT/tmp/ExSymExe20.java:7: error: cannot find symbol
  //@ requires Integer.MIN_VALUE <= r && r <= Integer.MAX_VALUE;
                                    ^
  symbol:   variable r
  location: class Main
/home/max/Documents/JMLGPT/tmp/ExSymExe20.java:7: error: cannot find symbol
  //@ requires Integer.MIN_VALUE <= r && r <= Integer.MAX_VALUE;
                                         ^
  symbol:   variable r
  location: class Main
/home/max/Documents/JMLGPT/tmp/ExSymExe20.java:8: error: cannot find symbol
  //@ ensures \result == (z >= x) && (x < r);
                          ^
  symbol:   variable z
  location: class Main
/home/max/Documents/JMLGPT/tmp/ExSymExe20.java:8: error: cannot find symbol
  //@ ensures \result == (z >= x) && (x < r);
                               ^
  symbol:   variable x
  location: class Main
/home/max/Documents/JMLGPT/tmp/ExSymExe20.java:8: error: cannot find symbol
  //@ ensures \result == (z >= x) && (x < r);
                                      ^
  symbol:   variable x
  location: class Main
/home/max/Documents/JMLGPT/tmp/ExSymExe20.java:8: error: cannot find symbol
  //@ ensures \result == (z >= x) && (x < r);
                                          ^
  symbol:   variable r
  location: class Main
10 errors

